--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "pulyavin/wmxml",
+	"name": "pulyavin/WebMoney",
 	"description": "WebMoney XML API on PHP",
 	"keywords": ["webmoney", "xml", "api", "WMXI"],
 	"homepage": "https://github.com/pulyavin/WebMoney-XML-API-PHP",
@@ -16,7 +16,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"pulyavin\\WMXML\\": ""
+			"pulyavin\\WebMoney\\": ""
 		}
 	}
 }
